// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "database": "test",
  "host": "localhost",
  "password": "password",
  "port": 3306,
  "replication": Object {
    "read": Array [
      Object {
        "host": "read0.example.com",
        "password": "password_read_0",
        "username": "username_read_0",
      },
      Object {
        "host": "read1.example.com",
        "password": "password_read_1",
        "username": "username_read_1",
      },
    ],
    "write": Object {
      "host": "write.example.com",
      "password": "password_write",
      "username": "username_write",
    },
  },
  "username": "username",
}
`;

exports[` 2`] = `
Object {
  "database": "test",
  "host": "localhost",
  "password": "password",
  "port": 3306,
  "replication": Object {
    "read": Array [
      Object {
        "host": "read0.example.com",
        "password": "password_read_0",
        "username": "username_read_0",
      },
      Object {
        "host": "read1.example.com",
        "password": "password_read_1",
        "username": "username_read_1",
      },
    ],
    "write": Object {
      "host": "write.example.com",
      "password": "password_write",
      "username": "username_write",
    },
  },
  "username": "username",
}
`;

exports[` 3`] = `
Object {
  "db": Object {
    "database": "test",
    "host": "localhost",
    "password": "password",
    "port": 777,
    "replication": Object {
      "read": Array [
        Object {
          "host": "read0.example.com",
          "password": "password_read_0",
          "username": "username_read_0",
        },
        Object {
          "host": "read1.example.com",
          "password": "password_read_1",
          "username": "username_read_1",
        },
      ],
      "write": Object {
        "host": "write.example.com",
        "password": "password_write",
        "username": "username_write",
      },
    },
    "username": "username",
  },
  "features": Object {
    "featurename": Object {
      "enabled": false,
    },
  },
  "redis": Object {
    "sentinels": Array [
      Object {
        "host": "localhost",
        "port": "26379",
        "test": false,
      },
      Object {
        "host": "localhost",
        "port": "26379",
        "test": true,
      },
    ],
  },
}
`;

exports[` 4`] = `
Object {
  "db": Object {
    "database": "test",
    "host": "localhost",
    "password": "password",
    "port": 7777,
    "replication": Object {
      "read": Array [
        Object {
          "host": "read0.example.com",
          "password": "password_read_0",
          "username": "username_read_0",
        },
        Object {
          "host": "read1.example.com",
          "password": "password_read_1",
          "username": "username_read_1",
        },
      ],
      "write": Object {
        "host": "write.example.com",
        "password": "password_write",
        "username": "username_write",
      },
    },
    "username": "username",
  },
  "features": Object {
    "featurename": Object {
      "enabled": false,
    },
  },
  "redis": Object {
    "sentinels": Array [
      Object {
        "host": "localhost",
        "port": "26379",
        "test": false,
      },
      Object {
        "host": "localhost",
        "port": "26379",
        "test": true,
      },
    ],
  },
}
`;

exports[`Config [default settings] [options] caseSensitive config should be case-sensitive 1`] = `
Object {
  "database": "test",
  "host": "localhost",
  "password": "password",
  "port": 3306,
  "replication": Object {
    "read": Array [
      Object {
        "host": "read0.example.com",
        "password": "password_read_0",
        "username": "username_read_0",
      },
      Object {
        "host": "read1.example.com",
        "password": "password_read_1",
        "username": "username_read_1",
      },
    ],
    "write": Object {
      "host": "write.example.com",
      "password": "password_write",
      "username": "username_write",
    },
  },
  "username": "username",
}
`;

exports[`Config [default settings] [options] get false conf.get should not allow get 1`] = `"get is not allowed"`;

exports[`Config [default settings] [options] validation config should be correct 1`] = `
Object {
  "db": Object {
    "database": "test",
    "host": "localhost",
    "password": "password",
    "port": 3306,
    "replication": Object {
      "read": Array [
        Object {
          "host": "read0.example.com",
          "password": "password_read_0",
          "username": "username_read_0",
        },
        Object {
          "host": "read1.example.com",
          "password": "password_read_1",
          "username": "username_read_1",
        },
      ],
      "write": Object {
        "host": "write.example.com",
        "password": "password_write",
        "username": "username_write",
      },
    },
    "username": "username",
  },
  "features": Object {
    "featurename": Object {
      "enabled": false,
    },
  },
  "redis": Object {
    "sentinels": Array [
      Object {
        "host": "localhost",
        "port": "26379",
        "test": false,
      },
      Object {
        "host": "localhost",
        "port": "26379",
        "test": true,
      },
    ],
  },
}
`;

exports[`Config [default settings] [options] validation root validations should not pass 1`] = `"{\\"errors\\":{\\"redis.sentinels.0.test\\":[\\"The redis.sentinels.0.test must be a true or false\\"],\\"features.featurename.key\\":[\\"The features.featurename.key field is required.\\"]}}"`;

exports[`Config [default settings] [options] validation rules should be parsed 1`] = `
Object {
  "db.database": Array [
    Object {
      "name": "string",
    },
  ],
  "db.host": Array [
    Object {
      "name": "required_with",
      "value": "db",
    },
    Object {
      "name": "string",
    },
  ],
  "db.password": Array [
    Object {
      "name": "string",
    },
  ],
  "db.port": Array [
    Object {
      "name": "integer",
    },
    Object {
      "name": "cast",
      "value": "number",
    },
  ],
  "db.replication.read.0.host": Array [
    Object {
      "name": "string",
    },
  ],
  "db.replication.read.0.password": Array [
    Object {
      "name": "string",
    },
  ],
  "db.replication.read.0.port": Array [
    Object {
      "name": "integer",
    },
    Object {
      "name": "cast",
      "value": "number",
    },
  ],
  "db.replication.read.0.username": Array [
    Object {
      "name": "string",
    },
  ],
  "db.replication.read.1.host": Array [
    Object {
      "name": "string",
    },
  ],
  "db.replication.read.1.password": Array [
    Object {
      "name": "string",
    },
  ],
  "db.replication.read.1.port": Array [
    Object {
      "name": "integer",
    },
    Object {
      "name": "cast",
      "value": "number",
    },
  ],
  "db.replication.read.1.username": Array [
    Object {
      "name": "string",
    },
  ],
  "db.replication.write.host": Array [
    Object {
      "name": "string",
    },
  ],
  "db.replication.write.password": Array [
    Object {
      "name": "string",
    },
  ],
  "db.replication.write.port": Array [
    Object {
      "name": "number",
    },
    Object {
      "name": "cast",
      "value": "number",
    },
  ],
  "db.replication.write.username": Array [
    Object {
      "name": "string",
    },
  ],
  "db.username": Array [
    Object {
      "name": "string",
    },
  ],
  "features.featurename.enabled": Array [
    Object {
      "name": "bool",
    },
    Object {
      "name": "cast",
      "value": "boolean,false",
    },
  ],
  "features.featurename.key": Array [
    Object {
      "name": "required",
    },
    Object {
      "name": "string",
    },
  ],
  "queue.first.accesskeyid": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.first.endpoint": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.first.queuename": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.first.queueurl": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.first.region": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.first.secretaccesskey": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.second.accesskeyid": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.second.endpoint": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.second.queuename": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.second.queueurl": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.second.region": Array [
    Object {
      "name": "string",
    },
  ],
  "queue.second.secretaccesskey": Array [
    Object {
      "name": "string",
    },
  ],
  "redis.host": Array [
    Object {
      "name": "string",
    },
  ],
  "redis.port": Array [
    Object {
      "name": "integer",
    },
  ],
  "redis.sentinels.0.host": Array [
    Object {
      "name": "string",
    },
  ],
  "redis.sentinels.0.port": Array [
    Object {
      "name": "integer",
    },
  ],
  "redis.sentinels.0.test": Array [
    Object {
      "name": "required",
    },
    Object {
      "name": "bool",
    },
    Object {
      "name": "cast",
      "value": "boolean,false",
    },
  ],
  "redis.sentinels.1.host": Array [
    Object {
      "name": "string",
    },
  ],
  "redis.sentinels.1.port": Array [
    Object {
      "name": "integer",
    },
  ],
  "redis.sentinels.1.test": Array [
    Object {
      "name": "required",
    },
    Object {
      "name": "bool",
    },
    Object {
      "name": "cast",
      "value": "boolean,false",
    },
  ],
}
`;

exports[`Config [default settings] [options] validation validation case isensitive should return errors 1`] = `
Object {
  "errors": Object {
    "features.featurename.key": Array [
      "The features.featurename.key field is required.",
    ],
  },
}
`;

exports[`Config [default settings] [options] validation validation redis should throw error 1`] = `"only objects allowed for validation"`;

exports[`Config [default settings] [options] validation validation redis.host should throw error 1`] = `"only objects allowed for validation"`;

exports[`Config [default settings] [options] validation validation redis.sentinels[0] should throw error 1`] = `"{\\"errors\\":{\\"redis.sentinels.0.test\\":[\\"The redis.sentinels.0.test must be a true or false\\"]}}"`;
